포트폴리오 영역 추가 (반응형 홈페이지)

--- a/styles/main.css
+++ b/styles/main.css
@@ -60,7 +60,7 @@ body header .h_left .logo_toggle .toggle_bg {
   align-items: center;
 }
 body header .h_left .logo_toggle .toggle_bg a:nth-child(1) {
-  background-color: #4d5ad6;
+  background-color: #6788FF;
   padding: 4px 20px;
   border-radius: 30px;
 }
@@ -110,6 +110,78 @@ body main .wrap {
   top: 0; /* 초기값설정 */
   height: 100vh;
   transition: all 0.3s;
+}
+body main .wrap .main_homepage_info .main_homepage {
+  background-color: #222;
+  padding: 117px 130px 72px;
+}
+body main .wrap .main_homepage_info .main_home_text {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+  align-items: flex-start;
+  width: 100%;
+}
+body main .wrap .main_homepage_info .main_homep_t h2 {
+  color: #fff;
+  font-size: 60px;
+  font-weight: 700;
+}
+body main .wrap .main_homepage_info .main_homep_s {
+  padding-left: 30px;
+}
+body main .wrap .main_homepage_info .main_homep_s h3 {
+  font-size: 48px;
+  color: #6788ff;
+}
+body main .wrap .main_homepage_info .main_homep_s h4 {
+  font-size: 48px;
+  color: #6788ff;
+  margin-bottom: 43px;
+}
+body main .wrap .main_homepage_info .main_homep_s h5 {
+  font-size: 20px;
+  color: #fff;
+  max-width: 860px;
+  font-weight: 300;
+  margin-bottom: 49px;
+  line-height: 150%;
+  padding-right: 100px;
+}
+body main .wrap .main_homepage_info .main_homep_s p {
+  font-weight: 400;
+  color: #fff;
+}
+body main .wrap .main_homepage_info .main_homepage_area {
+  max-width: 1600px;
+  display: flex;
+  margin-top: 49px;
+}
+body main .wrap .main_homepage_info .homepage_thumb {
+  margin-right: 20px;
+}
+body main .wrap .main_homepage_info .homepage_thumb:last-child {
+  margin-right: 0;
+}
+body main .wrap .main_homepage_info .homepage_info {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  background-color: #000;
+  padding: 20px;
+}
+body main .wrap .main_homepage_info .homepage_info .homep_left h3 {
+  font-size: 18px;
+  color: #fff;
+  font-weight: 600;
+  margin-bottom: 15px;
+}
+body main .wrap .main_homepage_info .homepage_info .homep_left p {
+  color: #fff;
+  font-weight: 300;
+}
+body main .wrap .main_homepage_info .homep_right {
+  max-width: 40px;
 }
 body main .wrap .menu_info {
   background-color: #f0f0f0;
@@ -178,7 +250,7 @@ body main .wrap .intro .intro_front {
   background-image: url(../images/intro/bg_wh_shadow.png);
   background-size: cover;
   background-position-y: center;
-  background-color: #4d5ad6;
+  background-color: #6788FF;
   height: 100vh;
   width: 100%;
   border-bottom: 1px solid #202020;
@@ -539,7 +611,7 @@ body main .wrap .port_developer .developer_container .view .view_box .project .p
   margin-left: 10px;
   transform: translateY(6px);
   width: 20px;
-  background-color: #4d5ad6;
+  background-color: #6788FF;
   border-radius: 50%;
 }
 body main .wrap .port_developer .developer_container .view .view_box .project .procject_box .project_left .project_info {
@@ -723,7 +795,7 @@ body main .wrap .port_designer .banner_box .swiper4 .swiper-wrapper .swiper-slid
 }
 body main .wrap .port_designer .package_box {
   padding: 50px 100px;
-  background-color: #4d5ad6;
+  background-color: #6788FF;
 }
 body main .wrap .port_designer .package_box .package_contents {
   display: flex;
@@ -996,14 +1068,14 @@ body main .wrap .skill_pop .skill_box_bg > div[class^=skill_] img {
 body main .wrap .skill_pop .skill_box_bg > div[class^=skill_] .en_title {
   display: block;
   font-weight: 600;
-  color: #4d5ad6;
+  color: #6788FF;
   font-size: 1.25rem;
   margin-bottom: 8px;
   text-align: center;
 }
 body main .wrap .skill_pop .skill_box_bg > div[class^=skill_] .ko_title {
   font-weight: 600;
-  color: #4d5ad6;
+  color: #6788FF;
   font-size: 1.75rem;
   margin-bottom: 16px;
   text-align: center;
@@ -1125,7 +1197,7 @@ body main .wrap .skill_pop .skill_box_bg > div[class^=skill_] .text_contents spa
     color: #111;
   }
   50% {
-    color: #4d5ad6;
+    color: #6788FF;
   }
   100% {
     color: #111;
