--- a/styles/main.css
+++ b/styles/main.css
@@ -129,6 +129,7 @@ body main .wrap .main_homepage_info .main_homep_t h2 {
 }
 body main .wrap .main_homepage_info .main_homep_s {
   padding-left: 30px;
+  margin-right: 40px;
 }
 body main .wrap .main_homepage_info .main_homep_s h3 {
   font-size: 48px;
@@ -140,25 +141,55 @@ body main .wrap .main_homepage_info .main_homep_s h4 {
   margin-bottom: 43px;
 }
 body main .wrap .main_homepage_info .main_homep_s h5 {
-  font-size: 20px;
+  font-size: 16px;
   color: #fff;
   max-width: 860px;
-  font-weight: 300;
-  margin-bottom: 49px;
+  font-weight: 400;
+  margin-bottom: 40px;
   line-height: 150%;
   padding-right: 100px;
 }
+body main .wrap .main_homepage_info .main_homep_s h5 em {
+  color: #6788FF;
+}
 body main .wrap .main_homepage_info .main_homep_s p {
   font-weight: 400;
-  color: #fff;
+  color: #f0f0f0;
+  font-size: 14px;
 }
 body main .wrap .main_homepage_info .main_homepage_area {
   max-width: 1600px;
   display: flex;
-  margin-top: 49px;
+  flex-flow: row nowrap;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 70px;
 }
 body main .wrap .main_homepage_info .homepage_thumb {
   margin-right: 20px;
+  overflow: hidden;
+  position: relative;
+}
+body main .wrap .main_homepage_info .homepage_thumb a:hover::after {
+  background-color: rgba(0, 0, 0, 0.9);
+  content: "click me!";
+  color: #fff;
+  font-size: 30px;
+  line-height: 430px;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  position: absolute;
+  z-index: 2;
+  top: 0;
+  left: 0;
+  transition: all 0.4s linear;
+}
+body main .wrap .main_homepage_info .homepage_thumb a {
+  overflow: hidden;
+}
+body main .wrap .main_homepage_info .homepage_thumb a img {
+  width: 100%;
 }
 body main .wrap .main_homepage_info .homepage_thumb:last-child {
   margin-right: 0;
@@ -167,21 +198,25 @@ body main .wrap .main_homepage_info .homepage_info {
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
-  background-color: #000;
+  background-color: #fff;
   padding: 20px;
+  border-radius: 4px;
 }
 body main .wrap .main_homepage_info .homepage_info .homep_left h3 {
   font-size: 18px;
-  color: #fff;
-  font-weight: 600;
-  margin-bottom: 15px;
+  color: #111;
+  font-weight: 700;
+  margin-bottom: 10px;
 }
 body main .wrap .main_homepage_info .homepage_info .homep_left p {
-  color: #fff;
-  font-weight: 300;
+  color: #111;
+  font-weight: 400;
 }
 body main .wrap .main_homepage_info .homep_right {
   max-width: 40px;
+}
+body main .wrap .main_homepage_info .homep_right img {
+  width: 30px;
 }
 body main .wrap .menu_info {
   background-color: #f0f0f0;
@@ -220,14 +255,15 @@ body main .wrap .menu_info .text_box {
   flex-flow: column nowrap;
   justify-content: center;
   align-items: center;
-  padding: 150px 0 150px;
+  padding: 100px 0 150px;
 }
 body main .wrap .menu_info .text_box a:hover {
-  background-image: url(../images/intro/line2.png);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  transition: 0.4s linear;
+  transition: all 0.4s;
+  color: #6788FF;
+}
+body main .wrap .menu_info .text_box a:hover span {
+  transition: all 0.4s;
+  color: #6788FF;
 }
 body main .wrap .menu_info .text_box a {
   text-align: center;
