--- a/styles/main.scss
+++ b/styles/main.scss
@@ -128,6 +128,7 @@ body {
                   }
                   .main_homep_s {
                     padding-left: 30px;
+                    margin-right: 40px;
                   }
                   .main_homep_s h3 {
                     font-size: 48px;
@@ -139,25 +140,57 @@ body {
                     margin-bottom: 43px;
                   }
                   .main_homep_s h5 {
-                    font-size: 20px;
+                    font-size: 16px;
                     color: #fff;
                     max-width: 860px;
-                    font-weight: 300;
-                    margin-bottom: 49px;
+                    font-weight: 400;
+                    margin-bottom: 40px;
                     line-height: 150%;
                     padding-right: 100px;
+                    em {
+                        color: $blue;
+                    }
                   }
                   .main_homep_s p {
                     font-weight: 400;
-                    color: #fff;
+                    color: $gray;
+                    font-size: 14px;
                   }
                   .main_homepage_area {
                     max-width: 1600px;
                     display: flex;
-                    margin-top: 49px;
+                    flex-flow: row nowrap;
+                    align-items: center;
+                    justify-content: space-between;
+                    margin-top: 70px;
                   }
                   .homepage_thumb {
                     margin-right: 20px;
+                    overflow: hidden;
+                    position: relative;
+                    a:hover {
+                        &::after {
+                            background-color: rgba(0, 0, 0, 0.9);
+                            content: "click me!";
+                            color:#fff;
+                            font-size: 30px;
+                            line-height: 430px;
+                            width: 100%;
+                            height: 100%;
+                            text-align: center;
+                            position: absolute;
+                            z-index: 2;
+                            top: 0;
+                            left: 0;
+                            transition: all 0.4s linear;
+                        }
+                    }
+                    a {
+                        overflow: hidden;
+                        img  {
+                            width: 100%;
+                        }
+                    }
                   }
                   .homepage_thumb:last-child {
                     margin-right: 0;
@@ -166,21 +199,25 @@ body {
                     display: flex;
                     justify-content: space-between;
                     align-items: flex-start;
-                    background-color: #000;
+                    background-color: #fff;
                     padding: 20px;
+                    border-radius: 4px;
                   }
                   .homepage_info .homep_left h3 {
                     font-size: 18px;
-                    color: #fff;
-                    font-weight: 600;
-                    margin-bottom: 15px;
+                    color: #111;
+                    font-weight: 700;
+                    margin-bottom: 10px;
                   }
                   .homepage_info .homep_left p {
-                    color: #fff;
-                    font-weight: 300;
+                    color: #111;
+                    font-weight: 400;
                   }
                   .homep_right {
                     max-width: 40px;
+                    img {
+                        width: 30px;
+                    }
                   }
             }
             .menu_info {
@@ -218,15 +255,20 @@ body {
                 .text_box {
                     display: block;
                     @include flex-col-ct-ct;
-                    padding: 150px 0 150px;
+                    padding: 100px 0 150px;
                     a:hover {
-                        background-image: url(../images/intro/line2.png);
-                        background-repeat: no-repeat;
-                        background-position: center;
-                        background-size: cover;
+                        // background-image: url(../images/intro/line2.png);
+                        // background-repeat: no-repeat;
+                        // background-position: center;
+                        // background-size: cover;
                         // background-size: 100%;
                         // animation: opacity 1s ease;
-                        transition: 0.4s linear;
+                        transition: all 0.4s;
+                        color:$blue;
+                        span {
+                            transition: all 0.4s;
+                            color:$blue;
+                        }
                     }
                     a {
                         text-align: center;
