--- a/styles/main.css
+++ b/styles/main.css
@@ -112,8 +112,11 @@ body main .wrap {
   transition: all 0.3s;
 }
 body main .wrap .main_homepage_info .main_homepage {
-  background-color: #222;
   padding: 117px 130px 72px;
+  background-image: url(/images/group_d/homepage_bg.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 }
 body main .wrap .main_homepage_info .main_home_text {
   display: flex;
