--- a/styles/main.css
+++ b/styles/main.css
@@ -188,6 +188,21 @@ body main .wrap .main_homepage_info .homepage_thumb a:hover::after {
   left: 0;
   transition: all 0.4s linear;
 }
+body main .wrap .main_homepage_info .homepage_thumb a:nth-of-type(4):hover::after {
+  background-color: rgba(0, 0, 0, 0.9);
+  content: "준비중입니다.";
+  color: #fff;
+  font-size: 30px;
+  line-height: 430px;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  position: absolute;
+  z-index: 2;
+  top: 0;
+  left: 0;
+  transition: all 0.4s linear;
+}
 body main .wrap .main_homepage_info .homepage_thumb a {
   overflow: hidden;
 }
