--- a/styles/main.scss
+++ b/styles/main.scss
@@ -188,7 +188,7 @@ body {
                             left: 0;
                             transition: all 0.4s linear;
                         }
-                        &:nth-of-type(4)&::after {
+                        &:nth-of-type(4)::after {
                             background-color: rgba(0, 0, 0, 0.9);
                             content: "준비중입니다.";
                             color:#fff;
@@ -238,6 +238,134 @@ body {
                         width: 30px;
                     }
                   }
+            }
+            .main_naver_place {
+                .place_area {
+                    // background-color: #222;
+                    
+                    padding: 117px 240px 72px 130px;
+                    background-image: url(/images/group_d/bg3.jpg);
+                    background-repeat: no-repeat;
+                    background-size: cover;
+                    background-position: center;
+                  }
+                  .main_home_text {
+                    display: flex;
+                    flex-flow: row nowrap;
+                    justify-content: space-between;
+                    align-items: flex-start;
+                    width: 100%;
+                  }
+                  .main_homep_t h2 {
+                    color: #fff;
+                    font-size: 60px;
+                    font-weight: 700;
+                  }
+                  .main_homep_s {
+                    padding-left: 30px;
+                    margin-right: 40px;
+                  }
+                  .main_homep_s h3 {
+                    font-size: 48px;
+                    color: #6788ff;
+                  }
+                  .main_homep_s h4 {
+                    font-size: 48px;
+                    color: #6788ff;
+                    margin-bottom: 43px;
+                  }
+                  .main_homep_s h5 {
+                    font-size: 16px;
+                    color: #fff;
+                    max-width: 860px;
+                    font-weight: 400;
+                    margin-bottom: 40px;
+                    line-height: 150%;
+                    padding-right: 100px;
+                    em {
+                        color: $blue;
+                    }
+                  }
+                  .main_homep_s p {
+                    font-weight: 400;
+                    color: $gray;
+                    font-size: 14px;
+                  }
+                  .main_place_img {
+                    width: 1640px;
+                    display: flex;
+                    flex-flow: row wrap;
+                    align-items: center;
+                    justify-content: space-between;
+                    margin-top: 70px;
+                    a {
+                        width: calc((100% / 4) - 10px);
+                        margin-bottom: 10px;
+                        img {
+                            width: 100%;
+                            // filter: grayscale(95%);
+                        }
+                        &:hover {
+                            img {
+                                // filter: none;
+                                opacity: 0.7;
+                                transition: all 0.5s linear;
+                            }
+                        }
+                    }
+                  }
+                  .homepage_thumb:last-child {
+                    margin-right: 0;
+                  }
+                  .homepage_info {
+                    display: flex;
+                    justify-content: space-between;
+                    align-items: flex-start;
+                    background-color: #fff;
+                    padding: 20px;
+                    border-radius: 4px;
+                  }
+                  .homepage_info .homep_left h3 {
+                    font-size: 18px;
+                    color: #111;
+                    font-weight: 700;
+                    margin-bottom: 10px;
+                  }
+                  .homepage_info .homep_left p {
+                    color: #111;
+                    font-weight: 400;
+                  }
+                  .homep_right {
+                    max-width: 40px;
+                    img {
+                        width: 30px;
+                    }
+                  }
+            }
+            .groupd_pop_img {
+                background-color: #202020;
+                width: 100%;
+                padding: 100px 50px;
+                display: flex;
+                flex-flow: column nowrap;
+                align-items: center;
+                h2 {
+                    color: #fff;
+                    font-size: 3.75rem;
+                    margin-bottom: 80px;
+                    letter-spacing: 0.02rem;
+                }
+                .popup_area {
+                    max-width: 1640px;
+                    display: flex;
+                    flex-flow: row wrap;
+                    align-items: center;
+                    justify-content: space-between;
+                    img {
+                        width: calc((100% / 6) - 10px);
+                        margin-bottom: 10px;
+                    }
+                }
             }
             .menu_info {
                 background-color: $gray;
@@ -1059,7 +1187,6 @@ body {
                         text-align: center;
                     }
                     p:nth-child(2) {
-                        margin-top: 20px;
                         margin-bottom: 20px;
                         color:#fff;
                         font-size: 1.6rem;
@@ -1073,10 +1200,16 @@ body {
                     p:nth-child(4) {
                         margin-top: 20px;
                         color:#fff;
-                        font-size: 1.125rem;
+                        font-size: 1.2rem;
                         text-align: center;
-                        font-weight: 200;
+                        font-weight: 500;
                         line-height: 2.1rem;
+                        letter-spacing: 0rem;
+                        em {
+                            color: #6788ff;
+                            font-weight: 400;
+                            font-size: 1rem;
+                        }
                     }
                     a:nth-child(5) {
                         font-size: 1rem;
